@@ -1,3 +1,14 @@
+2018-03-10  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/background/try_xpath_background.js:
+	Remove the cssOrigin argument when calling insertCSS.
+
+	* tryXpath/pages/options.js:
+	Use storage.local instead of storage.sync.
+
+	* tryXpath/background/try_xpath_background.js:
+	Use storage.local instead of storage.sync.
+
 2018-01-10  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/manifest.json:
